--- a/app/views/addresses/new.html.erb
+++ b/app/views/addresses/new.html.erb
@@ -1,5 +1,34 @@
-<h1>New address</h1>
+<style>
+		/* Styles for the navigation bar */
+		.navbar {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			background-color: #333;
+			color: #fff;
+			padding: 1rem;
+      margin-bottom: 5rem; 
 
+		}
+
+		.navbar a {
+			color: #fff;
+			margin-right: 1rem;
+			text-decoration: none;
+			font-size: 1.2rem;
+			font-weight: bold;
+		}
+
+		.navbar a:hover {
+			text-decoration: underline;
+		}
+  </style>
+
+<nav class="navbar">
+		<a href="/">Events</a>
+		<a href="/addresses/new">Address</a>
+		<a href="/events/new">Create Event</a>
+	</nav>
 <%= render "form", address: @address %>
 
 <br>
