--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,6 +1,6 @@
-<%= form_with(model: event) do |form| %>
+<%= form_with(model: event, class: "event-form") do |form| %>
   <% if event.errors.any? %>
-    <div style="color: red">
+    <div class="error-message">
       <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
 
       <ul>
@@ -11,22 +11,75 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
+  <div class="form-field">
+    <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
 
-  <div>
-    <%= form.label :description, style: "display: block" %>
+  <div class="form-field">
+    <%= form.label :description %>
     <%= form.text_area :description %>
   </div>
 
-  <div>
-    <%= form.label :tematics, style: "display: block" %>
+  <div class="form-field">
+    <%= form.label :tematics %>
     <%= form.text_field :tematics %>
   </div>
 
-  <div>
+  <div class="form-field">
+  <%= form.label :time %>
+  <%= form.datetime_local_field :time %>
+</div>
+
+  <div class="form-actions">
     <%= form.submit %>
   </div>
 <% end %>
+
+<style>
+  .event-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .error-message {
+    color: red;
+    margin-bottom: 1rem;
+  }
+  
+  .form-field {
+    margin-bottom: 1rem;
+  }
+  
+  .form-field label {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+  }
+  
+  .form-field input[type="text"], 
+  .form-field textarea {
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 0.25rem;
+    width: 100%;
+  }
+  
+  .form-actions {
+    margin-top: 1rem;
+  }
+  
+  .form-actions input[type="submit"] {
+    background-color: #007bff;
+    color: #fff;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.25rem;
+    cursor: pointer;
+  }
+  
+  .form-actions input[type="submit"]:hover {
+    background-color: #0069d9;
+  }
+</style>
