--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,99 +1,6 @@
-<style>
-  #events {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-  }
-
-  .event-card {
-    background-color: #fff;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-    padding: 20px;
-    width: 400px;
-  }
-
-  .event-card h2 {
-    font-size: 24px;
-    margin-top: 0;
-    margin-bottom: 10px;
-  }
-
-  .event-card p {
-    margin-top: 0;
-    margin-bottom: 5px;
-  }
-
-  .event-card .actions {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 10px;
-  }
-
-  .event-card .actions a, .event-card .actions input[type="submit"] {
-    padding: 8px 16px;
-    background-color: #4CAF50;
-    color: white;
-    text-decoration: none;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-
-  .event-card .actions a:hover, .event-card .actions input[type="submit"]:hover {
-    background-color: #3e8e41;
-  }
-
-  .notice {
-    color: green;
-  }
-
-  h1 {
-    font-size: 32px;
-    margin-top: 0;
-    margin-bottom: 20px;
-  }
-
-  #new-event-link {
-    display: block;
-    text-align: center;
-    margin-top: 20px;
-  }
-  .navbar {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: #333;
-    color: #fff;
-    padding: 1rem;
-  }
-
-  .navbar a {
-    color: #fff;
-    margin-right: 1rem;
-    text-decoration: none;
-    font-size: 1.2rem;
-    font-weight: bold;
-  }
-
-  .navbar a:hover {
-    text-decoration: underline;
-  }
-</style>
-
 <div>
-
+  <%= render '/layouts/nav_links' %>
   <p class="notice"><%= notice %></p>
-
-  <nav class="navbar">
-  <a href="/">Main</a>
-  <a href="/events">My events</a>
-  <a href="/addresses/new"> Create Address</a>
-  <a href="/events/new">Create Event</a>
-
-</nav>
 
   <h1>My events</h1>
 
@@ -104,13 +11,12 @@
         <p><strong>Date:</strong> <%= event.time %></p>
 
         <div class="actions">
-          <%= link_to "Open", event %>
+          <%= button_to "Open", event_path(event), :method => :get, :id => "openbtn" %>
           <%= link_to "Edit", edit_event_path(event) %>
-          <%= button_to "Delete", event, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <%= button_to "Delete", event, method: :delete, :id => "deletebtn" %>
         </div>
       </div>
     <% end %>
   </div>
-
-  <%= link_to "Create new event", new_event_path, id: "new-event-link" %>
+  <%= button_to "Create new event", new_event_path, :method => :get, style: "background-color: #007bff; padding: 8px 16px" %>
 </div>
