--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,104 +3,97 @@
 <head>
   <title>Events platform</title>
   <style>
-    /* Rest of your styles */
-    .event-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
+      /* Rest of your styles */
+      .event-container {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+      }
 
-    .event-card {
-      max-width: 300px;
-      margin: 1rem;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      overflow: hidden;
-    }
+      .event-card {
+          max-width: 300px;
+          margin: 1rem;
+          border: 1px solid #ddd;
+          border-radius: 5px;
+          overflow: hidden;
+      }
 
-    .event-card img {
-      width: 100%;
-      height: auto;
-    }
+      .event-card img {
+          width: 100%;
+          height: auto;
+      }
 
-    .event-card h3 {
-      font-size: 1.5rem;
-      margin: 0.5rem;
-    }
+      .event-card h3 {
+          font-size: 1.5rem;
+          margin: 0.5rem;
+      }
 
-    .event-card p {
-      font-size: 1.2rem;
-      margin: 0.5rem;
-    }
+      .event-card p {
+          font-size: 1.2rem;
+          margin: 0.5rem;
+      }
 
-    .event-card button {
-      background-color: #4CAF50;
-      border: none;
-      color: white;
-      padding: 10px 20px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      margin: 4px 2px;
-      cursor: pointer;
-    }
+      .event-card button {
+          background-color: #4CAF50;
+          border: none;
+          color: white;
+          padding: 10px 20px;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 16px;
+          margin: 4px 2px;
+          cursor: pointer;
+      }
 
-    .filter-container {
-      display: flex;
-      justify-content: center;
-      margin: 1rem 0;
-    }
+      .filter-container {
+          display: flex;
+          justify-content: center;
+          margin: 1rem 0;
+      }
 
-    .filter-container label {
-      margin-right: 1rem;
-      font-size: 1.2rem;
-    }
+      .filter-container label {
+          margin-right: 1rem;
+          font-size: 1.2rem;
+      }
+
   </style>
 </head>
 <body>
-    <%= render '/layouts/nav_links' %>
-    <% yield %>
-  </nav>
-  <main>
+<%= render '/layouts/nav_links' %>
+<main>
   <h2><%= t('upcomingEv') %></h2>
   <div class="event-container">
     <% @events.each do |event| %>
       <div class="event-card">
-        <% if event.tematics == "sport" %>
+        <% if event.tematics == "Sport" %>
           <img src="https://th.bing.com/th/id/OIP.4QzoU0mvimQXmqDWftL9lAAAAA?w=285&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Зображення події">
-        <% elsif event.tematics == "films" %>
+        <% elsif event.tematics == "Films" %>
           <img src="https://th.bing.com/th/id/OIP.cxiuYjD6n585OKvTQBs2QwAAAA?pid=ImgDet&rs=1" alt="Зображення події">
-        <% elsif event.tematics == "art" %>
-          <img src="https://th.bing.com/th/id/R.4123039f1d0d1e8ab9aba6b458e9ff12?rik=ks5IrcWpPqUrAw&riu=http%3a%2f%2fi.huffpost.com%2fgen%2f1110138%2fimages%2fo-AFRICAN-AMERICAN-POLITICIANS-facebook.jpg&ehk=WmwsHDqkSLsJSkBzaCSiqziWOUVh3qOeimIsdp%2b4V9g%3d&risl=&pid=ImgRaw&r=0" alt="Зображення події">
-        <% elsif event.tematics == "politician" %>
+        <% elsif event.tematics == "Art" %>
+          <img src="https://02varvara.files.wordpress.com/2012/06/00h-street-art-bariloche-arg-05-12.jpg" alt="Зображення події">
+        <% elsif event.tematics == "Education" %>
           <img src="https://s3-eu-central-1.amazonaws.com/websites-production/unicaf/wp-content/uploads/2016/05/EDUCATION-text.jpg" alt="Зображення події">
-        <% elsif event.tematics == "education" %>
-          <img src="https://example.com/education-image.jpg" alt="Зображення події">
-        <% elsif event.tematics == "comedian" %>
+        <% elsif event.tematics == "Comedian" %>
           <img src="https://th.bing.com/th/id/OIP.eP-IDTGwsEwyUcMiAl91TwHaE8?w=296&h=197&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="Зображення події">
         <% else %>
           <img src="https://th.bing.com/th/id/R.55302f0e29c358db68ad0c286a4a872d?rik=G74swO3KymIKWg&riu=http%3a%2f%2fshcm.org%2fwp-content%2fuploads%2f2019%2f11%2fUpcoming-events.jpg&ehk=kTi8rG0kGUGX4flm3cnZbEt7bLvqZx1zKyOfYD%2b8qZw%3d&risl=&pid=ImgRaw&r=0" alt="Зображення події">
         <% end %>
-        <h3><%= event.name%></h3>
+        <h3><%= event.name %></h3>
+        <h4><%= event.time %></h4>
         <p><%= event.description %></p>
-        <button class="register-button" data-event-id="<%= event.id %>"><%= t('register') %></button>
-        </div>
+        <% if current_user.events.include?(event) %>
+          <%= button_to "Open", event_path(event), :method => :get, :id => "openbtn" %>
+        <% elsif current_user.events_registered.include?(event) %>
+          <%= button_to "Unregister", unregister_event_path(event), :method => :get,
+                        data: { confirm: 'Are you sure you want to unregister from this event?' },
+                        :style => "background-color: #ff4e33" %>
+        <% else %>
+          <%=  button_to "Register", register_event_path(event), :method => :get %>
+        <% end %>
+      </div>
     <% end %>
-    <script>
-    document.addEventListener('DOMContentLoaded', () => {
-  const registerButton = document.querySelector('.register-button');
-  registerButton.addEventListener('click', () => {
-    const eventId = registerButton.getAttribute('data-event-id');
-    fetch(`/events/${eventId}/register`)
-      .then(response => response.text())
-      .then(data => {
-        registerButton.textContent = 'Enrolled';
-      });
-  });
-});
-    </script>
   </div>
-  </main>
+</main>
 </body>
 </html>
