Add address to event form

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -14,4 +14,13 @@
     <%= event.tematics %>
   </p>
 
+  <p>
+    <strong>Time:</strong>
+    <%= event.time %>
+  </p>
+
+  <p>
+    <strong>Address:</strong>
+    <%= event.address %>
+  </p>
 </div>
