--- a/app/assets/stylesheets/components/events.css
+++ b/app/assets/stylesheets/components/events.css
@@ -160,7 +160,7 @@ h1 {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
     text-align: center;
     font-size: 24px;
-    height: 400px;
+    height: max-content;
 }
 
 #openbtn{
