--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -9,6 +9,7 @@
       <div class="event-card">
         <h2><%= event.name %></h2>
         <p><strong>Date:</strong> <%= event.time %></p>
+        <p><strong>Address:</strong> <%= event.address %></p>
 
         <div class="actions">
           <%= button_to "Open", event_path(event), :method => :get, :id => "openbtn" %>
