--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -15,7 +15,7 @@
 
 <div class="user-registered">
   <h4>Users registered to event:</h4>
-  <% @event.users_registered do |user| %>
+  <% @event.users_registered.each do |user| %>
     <p><%= user.email %></p>
   <% end %>
 </div>
