--- a/app/assets/stylesheets/components/events.css
+++ b/app/assets/stylesheets/components/events.css
@@ -187,3 +187,15 @@ h1 {
     align-items: center;
     margin: 1rem;
 }
+
+.user-registered {
+    max-width: 50%;
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    font-size: 24px;
+    height: max-content;
+    background-color: #acffd7;
+}
