--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -83,7 +83,7 @@
         <h4><%= event.time %></h4>
         <h4><%= event.address %></h4>
         <p><%= event.description %></p>
-        <% if current_user.events.include?(event) %>
+        <% if can? :update, event %>
           <%= button_to "Open", event_path(event), :method => :get, :id => "openbtn" %>
         <% elsif current_user.events_registered.include?(event) %>
           <%= button_to "Unregister", unregister_event_path(event), :method => :get,
